2008.075:
	- Replace redundant error message for unsucessful sending of
	WRITE commands with a check for reply from server in
	dl_sendpacket().

2008.074: 0.9.3
	- Update dlp_genclientid() to lookup the current user without
	needing an interactive shell login.
	- Fix dl_freedlcp(), address and client ID strings are now static.

2008.072: 0.9.2
	- Implement dlp_genclientid() routine to generate client IDs.
        - Change dl_newdlcp() to take address and progname arguments,
	these strings will be copied and stored in the DLCP struct
	and freed with dl_freedlcp().  dl_newdlcp() now sets the client
	ID using dlp_genclientid().
	- Change portable define DLP_DARWIN to DLP_BSD to cover all BSDs.

2008.070: 0.9.1
	- Add an infomatch argument to dl_getinfo() and add the match
	expression to the INFO request.  Allows limiting a request for
	CONNECTIONS to specific clients.

2008.060:
	- Change dl_getinfo() to take a pointer-to-a-pointer for the
	info buffer and allocate an appropriate size buffer when
	the maxinfosize argument is 0.

2008.057: 0.9
	- Initial version, derived from libslink 2.0.