@@ -1,7 +1,8 @@
 2008.075:
-	- Replace redundant error message for unsucessful sending of
+	- Replace redundant error message for unsuccessful sending of
 	WRITE commands with a check for reply from server in
 	dl_sendpacket().
+	- Remove const qualifier from user-supplied logging functions. 
 
 2008.074: 0.9.3
 	- Update dlp_genclientid() to lookup the current user without
